--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@vueuse/core": "^9.13.0",
     "axios": "^1.3.4",
+    "crypto-js": "^4.1.1",
     "element-plus": "^2.2.32",
     "pinia": "^2.0.32",
+    "pinia-plugin-persist": "^1.0.0",
     "unplugin-auto-import": "^0.14.4",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
