--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "pinia-plugin-persist": "^1.0.0",
     "unplugin-auto-import": "^0.14.4",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue3-video-play": "^1.3.1-beta.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
